--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@iconify/react": "^5.0.1",
 		"@nextui-org/button": "2.0.34",
 		"@nextui-org/code": "2.0.29",
 		"@nextui-org/input": "2.2.2",
 		"@nextui-org/kbd": "2.0.30",
 		"@nextui-org/link": "2.0.32",
 		"@nextui-org/listbox": "2.1.21",
+		"@nextui-org/modal": "^2.0.36",
 		"@nextui-org/navbar": "2.0.33",
 		"@nextui-org/snippet": "2.0.38",
 		"@nextui-org/switch": "2.0.31",
@@ -22,15 +25,31 @@
 		"@nextui-org/theme": "2.2.5",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@reduxjs/toolkit": "^2.2.6",
+		"@tanstack/react-query": "^5.50.1",
+		"@tanstack/react-query-devtools": "^5.50.1",
+		"@tsparticles/engine": "^3.5.0",
+		"axios": "^1.7.2",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-hook-form": "^7.52.1",
+		"react-icons": "^5.2.1",
+		"react-redux": "^9.1.2",
+		"react-tsparticles": "^2.12.2",
+		"redux-persist": "^6.0.0",
+		"sonner": "^1.5.0",
+		"tsparticles": "^3.5.0",
+		"tsparticles-engine": "^2.12.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
